# dune-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/: config.py  main.py
src/services/: budget_manager.py  cache.py  data_processor.py  dune_client.py  error_analyzer.py
tests/: probe_graphql.py  test_mcp_handshake.py  test_tool_search.py
tests/unit/: test_budget_manager.py  test_dune_service.py  test_error_analyzer.py
