[project]
name = "dune-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachetools>=6.2.4",
    "curl-cffi>=0.14.0",
    "dune-client>=1.10.0",
    "mcp[cli]>=1.24.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
